some changes on scripts

--- a/Scripts/Untitled.ipynb
+++ b/Scripts/Untitled.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,28 +23,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "15"
+       "22"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "captions = store_to_vdb.playlist_to_captions(\"PLUl4u3cNGP619EG1wp0kT-7rDE_Az5TNd\")\n",
+    "captions = store_to_vdb.playlist_to_captions(\"PLUl4u3cNGP60uVBMaoNERc6knT_MgPKS0\")\n",
     "len(captions)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -52,21 +52,28 @@
      "output_type": "stream",
      "text": [
       "The following content is provided under a Creative Commons license.\n",
-      "358\n",
-      "430\n",
-      "760\n",
-      "447\n",
-      "456\n",
-      "479\n",
-      "426\n",
-      "448\n",
-      "608\n",
-      "713\n",
-      "762\n",
-      "495\n",
-      "421\n",
-      "524\n",
-      "398\n"
+      "1034\n",
+      "897\n",
+      "1015\n",
+      "843\n",
+      "836\n",
+      "810\n",
+      "1065\n",
+      "793\n",
+      "723\n",
+      "913\n",
+      "975\n",
+      "673\n",
+      "729\n",
+      "687\n",
+      "864\n",
+      "677\n",
+      "748\n",
+      "774\n",
+      "797\n",
+      "700\n",
+      "918\n",
+      "579\n"
      ]
     }
    ],
@@ -75,6 +82,24 @@
     "print(captions[0]['video_captions'][0]['text'])\n",
     "for i in range(len(captions)):\n",
     "    print(len(captions[i]['video_captions']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "810\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(captions[5]['video_captions']))\n",
+    "embeds_test = store_to_vdb.captions_to_embeddings([captions[5]])\n"
    ]
   },
   {
@@ -126,28 +151,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "15"
+       "22"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "emds = store_to_vdb.captions_to_embeddings(captions)\n",
+    "len(captions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "emds = store_to_vdb.captions_to_embeddings(captions[16:])\n",
     "len(emds)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pinecone\n",
+    "PIENCONE_API_KEY = \"3d2006de-95b3-4e7d-9ec1-54133c34001e\"\n",
+    "pinecone.init(PIENCONE_API_KEY, environment='us-west1-gcp')\n",
+    "index_name = 'first-index'\n",
+    "index = pinecone.Index(index_name)\n",
+    "\n",
+    "last_id =  index.describe_index_stats()['total_vector_count']+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21681"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "last_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +273,7 @@
     "    index = pinecone.Index(index_name)\n",
     "    print('============2===============')\n",
     "    \n",
-    "    last_id = 0 \n",
+    "    last_id =  index.describe_index_stats()['total_vector_count']+1\n",
     "    for x in range(len(collection)):\n",
     "        list_dic_data = collection[x]\n",
     "        print(len(collection[x]))\n",
@@ -240,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -249,126 +330,54 @@
      "text": [
       "============1===============\n",
       "============2===============\n",
-      "358\n",
+      "748\n",
       "(1024,)\n",
-      "C1lhuz6pZC0   358\n",
+      "WW3ZJHPwvyg   748\n",
       "empty\n",
       "{'dimension': 1024,\n",
       " 'index_fullness': 0.0,\n",
-      " 'namespaces': {'': {'vector_count': 358}},\n",
-      " 'total_vector_count': 358}\n",
-      "430\n",
+      " 'namespaces': {'': {'vector_count': 22349}},\n",
+      " 'total_vector_count': 22349}\n",
+      "774\n",
       "(1024,)\n",
-      "uK5yvoXnkSk   430\n",
+      "a1ZCeFpeW0o   774\n",
       "empty\n",
       "{'dimension': 1024,\n",
       " 'index_fullness': 0.0,\n",
-      " 'namespaces': {'': {'vector_count': 788}},\n",
-      " 'total_vector_count': 788}\n",
-      "760\n",
+      " 'namespaces': {'': {'vector_count': 23123}},\n",
+      " 'total_vector_count': 23123}\n",
+      "797\n",
       "(1024,)\n",
-      "V_TulH374hw   760\n",
+      "X-ix97pw0xY   797\n",
       "empty\n",
       "{'dimension': 1024,\n",
       " 'index_fullness': 0.0,\n",
-      " 'namespaces': {'': {'vector_count': 1548}},\n",
-      " 'total_vector_count': 1548}\n",
-      "447\n",
+      " 'namespaces': {'': {'vector_count': 23920}},\n",
+      " 'total_vector_count': 23920}\n",
+      "700\n",
       "(1024,)\n",
-      "-1BnXEwHUok   447\n",
+      "mc1y8m9-hOM   700\n",
       "empty\n",
       "{'dimension': 1024,\n",
       " 'index_fullness': 0.0,\n",
-      " 'namespaces': {'': {'vector_count': 1995}},\n",
-      " 'total_vector_count': 1995}\n",
-      "456\n",
+      " 'namespaces': {'': {'vector_count': 24620}},\n",
+      " 'total_vector_count': 24620}\n",
+      "918\n",
       "(1024,)\n",
-      "6wUD_gp5WeE   456\n",
+      "OYcdw5vOgIc   918\n",
       "empty\n",
       "{'dimension': 1024,\n",
       " 'index_fullness': 0.0,\n",
-      " 'namespaces': {'': {'vector_count': 2451}},\n",
-      " 'total_vector_count': 2451}\n",
-      "479\n",
+      " 'namespaces': {'': {'vector_count': 25538}},\n",
+      " 'total_vector_count': 25538}\n",
+      "579\n",
       "(1024,)\n",
-      "OgO1gpXSUzU   479\n",
+      "lWW54ts9Ubo   579\n",
       "empty\n",
       "{'dimension': 1024,\n",
       " 'index_fullness': 0.0,\n",
-      " 'namespaces': {'': {'vector_count': 2930}},\n",
-      " 'total_vector_count': 2930}\n",
-      "426\n",
-      "(1024,)\n",
-      "rUxP7TM8-wo   426\n",
-      "empty\n",
-      "{'dimension': 1024,\n",
-      " 'index_fullness': 0.0,\n",
-      " 'namespaces': {'': {'vector_count': 3356}},\n",
-      " 'total_vector_count': 3356}\n",
-      "448\n",
-      "(1024,)\n",
-      "soZv_KKax3E   448\n",
-      "empty\n",
-      "{'dimension': 1024,\n",
-      " 'index_fullness': 0.0,\n",
-      " 'namespaces': {'': {'vector_count': 3804}},\n",
-      " 'total_vector_count': 3804}\n",
-      "608\n",
-      "(1024,)\n",
-      "vIFKGFl1Cn8   608\n",
-      "empty\n",
-      "{'dimension': 1024,\n",
-      " 'index_fullness': 0.0,\n",
-      " 'namespaces': {'': {'vector_count': 4412}},\n",
-      " 'total_vector_count': 4412}\n",
-      "713\n",
-      "(1024,)\n",
-      "fQvg-hh9dUw   713\n",
-      "empty\n",
-      "{'dimension': 1024,\n",
-      " 'index_fullness': 0.0,\n",
-      " 'namespaces': {'': {'vector_count': 5125}},\n",
-      " 'total_vector_count': 5125}\n",
-      "762\n",
-      "(1024,)\n",
-      "h0e2HAPTGF4   762\n",
-      "empty\n",
-      "{'dimension': 1024,\n",
-      " 'index_fullness': 0.0,\n",
-      " 'namespaces': {'': {'vector_count': 5887}},\n",
-      " 'total_vector_count': 5887}\n",
-      "495\n",
-      "(1024,)\n",
-      "esmzYhuFnds   495\n",
-      "empty\n",
-      "{'dimension': 1024,\n",
-      " 'index_fullness': 0.0,\n",
-      " 'namespaces': {'': {'vector_count': 6382}},\n",
-      " 'total_vector_count': 6382}\n",
-      "421\n",
-      "(1024,)\n",
-      "eg8DJYwdMyg   421\n",
-      "empty\n",
-      "{'dimension': 1024,\n",
-      " 'index_fullness': 0.0,\n",
-      " 'namespaces': {'': {'vector_count': 6803}},\n",
-      " 'total_vector_count': 6803}\n",
-      "524\n",
-      "(1024,)\n",
-      "K2SC-WPdT6k   524\n",
-      "empty\n",
-      "{'dimension': 1024,\n",
-      " 'index_fullness': 0.0,\n",
-      " 'namespaces': {'': {'vector_count': 7327}},\n",
-      " 'total_vector_count': 7327}\n",
-      "398\n",
-      "(1024,)\n",
-      "iOZVbILaIZc   398\n",
-      "empty\n",
-      "{'dimension': 1024,\n",
-      " 'index_fullness': 0.0,\n",
-      " 'namespaces': {'': {'vector_count': 7725}},\n",
-      " 'total_vector_count': 7725}\n"
+      " 'namespaces': {'': {'vector_count': 26117}},\n",
+      " 'total_vector_count': 26117}\n"
      ]
     }
    ],
@@ -378,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +402,7 @@
     "import cohere\n",
     "co = cohere.Client(\"SrLBFEol9tRK7n7LY9FRRcHuN9QT5MLIzLmBSziT\")\n",
     "\n",
-    "query = \"hello world\"\n",
+    "query = \"population bias\"\n",
     "\n",
     "index = pinecone.Index(\"first-index\")\n",
     "# create the query embedding\n",
@@ -411,43 +420,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'matches': [{'id': '0',\n",
-       "              'metadata': {'start': 6.0,\n",
-       "                           'text': 'hello world',\n",
-       "                           'video_id': 'C1lhuz6pZC0'},\n",
-       "              'score': 1905.05444,\n",
+       "{'matches': [{'id': '20316',\n",
+       "              'metadata': {'start': 509.33,\n",
+       "                           'text': 'Maybe this population is not the '\n",
+       "                                   'population in the world.',\n",
+       "                           'video_id': 'bFZ-0FH5hfs'},\n",
+       "              'score': 1403.53088,\n",
        "              'sparseValues': {},\n",
        "              'values': []},\n",
-       "             {'id': '460',\n",
-       "              'metadata': {'start': 2144.35, 'video_id': 'vIFKGFl1Cn8'},\n",
-       "              'score': 921.666809,\n",
+       "             {'id': '7152',\n",
+       "              'metadata': {'start': 2002.77,\n",
+       "                           'text': 'It is true from the Census Bureau data.',\n",
+       "                           'video_id': 'K2SC-WPdT6k'},\n",
+       "              'score': 1306.06445,\n",
        "              'sparseValues': {},\n",
        "              'values': []},\n",
-       "             {'id': '324',\n",
-       "              'metadata': {'start': 1621.628, 'video_id': 'vIFKGFl1Cn8'},\n",
-       "              'score': 910.555786,\n",
+       "             {'id': '8652',\n",
+       "              'metadata': {'start': 4103.84,\n",
+       "                           'text': 'Here what I am assuming is that my '\n",
+       "                                   'population is homogeneous.',\n",
+       "                           'video_id': 'VPZD_aij8H0'},\n",
+       "              'score': 1287.48157,\n",
        "              'sparseValues': {},\n",
        "              'values': []},\n",
-       "             {'id': '668',\n",
-       "              'metadata': {'start': 2628.49, 'video_id': 'V_TulH374hw'},\n",
-       "              'score': 900.626099,\n",
+       "             {'id': '16278',\n",
+       "              'metadata': {'start': 257.62,\n",
+       "                           'text': 'And so here of course, the population is '\n",
+       "                                   'not uniformly distributed according to '\n",
+       "                                   'racial group.',\n",
+       "                           'video_id': 'a66tfLdr6oY'},\n",
+       "              'score': 1262.81775,\n",
        "              'sparseValues': {},\n",
        "              'values': []},\n",
-       "             {'id': '248',\n",
-       "              'metadata': {'start': 1277.2, 'video_id': 'vIFKGFl1Cn8'},\n",
-       "              'score': 885.683655,\n",
+       "             {'id': '3695',\n",
+       "              'metadata': {'start': 2038.41,\n",
+       "                           'text': 'One is, does the distribution of the '\n",
+       "                                   'population matter?',\n",
+       "                           'video_id': 'soZv_KKax3E'},\n",
+       "              'score': 1245.9679,\n",
        "              'sparseValues': {},\n",
        "              'values': []}],\n",
        " 'namespace': ''}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
