--- a/Scripts/Untitled.ipynb
+++ b/Scripts/Untitled.ipynb
@@ -113,7 +113,6 @@
     "\n",
     "\n",
     "# def captions_to_embeddings(videos_captions):\n",
-    "#     api_key = 'SrLBFEol9tRK7n7LY9FRRcHuN9QT5MLIzLmBSziT'\n",
     "#     # Create and retrieve a Cohere API key from os.cohere.ai\n",
     "#     co = cohere.Client(api_key)\n",
     "#     all_embeds = []\n",
@@ -198,7 +197,6 @@
    "source": [
     "import numpy as np\n",
     "import pinecone\n",
-    "PIENCONE_API_KEY = \"3d2006de-95b3-4e7d-9ec1-54133c34001e\"\n",
     "pinecone.init(PIENCONE_API_KEY, environment='us-west1-gcp')\n",
     "index_name = 'first-index'\n",
     "index = pinecone.Index(index_name)\n",
@@ -235,7 +233,7 @@
     "import numpy as np\n",
     "import pinecone\n",
     "# import cohere\n",
-    "# co = cohere.Client(\"SrLBFEol9tRK7n7LY9FRRcHuN9QT5MLIzLmBSziT\")\n",
+    "# co = cohere.Client(key)\n",
     "\n",
     "# query = \"hello world\"\n",
     "\n",
@@ -254,7 +252,6 @@
     "\n",
     "def Piencone_indexing(collection):    #    -> [[{}]]  -> [[ {start:--- , video_id:--- , embedding:--- }   ,]]\n",
     "    \n",
-    "    PIENCONE_API_KEY = \"3d2006de-95b3-4e7d-9ec1-54133c34001e\"\n",
     "    \n",
     "    pinecone.init(PIENCONE_API_KEY, environment='us-west1-gcp')\n",
     "    index_name = 'first-index'\n",
